--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
   # ============================================
   backend:
     build:
-      context: ./5-pagina-web-login/backend
+      context: ./5.main/backend
       dockerfile: Dockerfile
     container_name: culqui-backend
     restart: unless-stopped
@@ -62,7 +62,7 @@ services:
     networks:
       - culqui-network
     volumes:
-      - ./5-pagina-web-login/backend/src:/app/src:ro
+      - ./5.main/backend/src:/app/src:ro
     healthcheck:
       test: ["CMD", "node", "-e", "require('http').get('http://localhost:5000/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
       interval: 30s
@@ -75,7 +75,7 @@ services:
   # ============================================
   frontend:
     build:
-      context: ./5-pagina-web-login/frontend
+      context: ./5.main/frontend
       dockerfile: Dockerfile
       args:
         REACT_APP_API_URL: ${REACT_APP_API_URL:-http://localhost:5000/api}
